--- a/src/app/pages/project-detail/project-detail.page.scss
+++ b/src/app/pages/project-detail/project-detail.page.scss
@@ -126,8 +126,10 @@ h3{font-size:16px;font-weight:600;margin-bottom:12px;color:$dark}}
     }
     .col-service{text-align:left;color:$gray !important;}
     .col-date{
-      text-align:right;
-      padding-right:20px;
+      text-align:center;
+      display:flex;
+      align-items:center;
+      justify-content:center;
     }
     .col-actions{text-align:center;}
   }
@@ -181,10 +183,9 @@ h3{font-size:16px;font-weight:600;margin-bottom:12px;color:$dark}}
     .col-date{
       display:flex;
       align-items:center;
-      justify-content:flex-end;
+      justify-content:center;
       gap:8px;
       position:relative;
-      padding-right:20px;
       
       .date-input{
         width:100%;
